--- a/settings.ini
+++ b/settings.ini
@@ -32,7 +32,7 @@ audience = Developers
 author = Gautam Ethiraj
 author_email = gautam.e@gmail.com
 copyright = 2026 onwards, %(author)s
-description = Make structured output easy for different LLM providers with the help of litellm
+description = Structured output with different LLM providers
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
