--- a/settings.ini
+++ b/settings.ini
@@ -1,16 +1,10 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/AnswerDotAI/nbdev/blob/main/settings.ini for examples.
-
-### Python library ###
 repo = litestruct
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = litestruct
+version = 0.0.2
 min_python = 3.9
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = litestruct
 nbs_path = nbs
@@ -18,29 +12,29 @@ recursive = True
 tst_flags = notest
 put_version_in_init = True
 update_pyproject = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://gautam-e.github.io
+doc_baseurl = /litestruct
+git_url = https://github.com/gautam-e/litestruct
+title = litestruct
 audience = Developers
 author = Gautam Ethiraj
 author_email = gautam.e@gmail.com
-copyright = 2026 onwards, %(author)s
+copyright = 2026 onwards, Gautam Ethiraj
 description = Structured output with different LLM providers
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = gautam-e
-
-### Optional ###
 requirements = litellm pydantic
-# dev_requirements = 
-# console_scripts =
 conda_user = gautam_e
-# package_data =
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = False
+clean_ids = True
+clear_all = False
+cell_number = True
+skip_procs = 
+
